--- a/VitsUI/App.config
+++ b/VitsUI/App.config
@@ -58,6 +58,12 @@
             <setting name="isEnableDiff" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="isEnableAutoKey" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="isEnableNSF" serializeAs="String">
+                <value>True</value>
+            </setting>
         </VitsUI.Properties.Settings>
     </userSettings>
 </configuration>
